# opencv-cpp-examples

./: .gitignore  CMakeLists.txt  README.md  format_code.bat  run_cmake.bat  start_vs2017.bat
src/: CMakeLists.txt  main.cpp
